--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
-  - "0.12"
-  - "iojs"
   - "4"
   - "5"
   - "6"
   - "node"
 notifications:
   email: false
+script:
+  - npm test
+  - npm run lint
