--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "ismay",
   "license": "MIT",
   "dependencies": {
+    "browserslist": "^2.0.0",
     "doiuse": "^2.6.0",
     "lodash": "^4.17.4",
     "postcss": "^5.2.16",
