--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: node_js
-cache: yarn
 notifications:
   email: false
 node_js:
   - "4"
+  - "5"
   - "6"
+  - "7"
   - "8"
+install:
+  - npm i -g npm
+  - npm i
 script:
   - npm test
 jobs:
