Update travis config (#38)
* Update travis config

* Only test node LTS versions

* Cache node_modules on travis

* Only install npm 5 when needed on travis

* Remove useless install step

* Remove default script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: node_js
-cache: yarn
+cache:
+  directories:
+    - node_modules
 notifications:
   email: false
 node_js:
   - "4"
   - "6"
   - "8"
-script:
-  - npm test
+before_install:
+  - if [[ `npm -v` != 5* ]]; then npm install -g npm@5; fi
 jobs:
   include:
     - stage: lint
