--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   "dependencies": {
     "doiuse": "^4.0.0",
     "lodash": "^4.17.4",
-    "postcss": "^6.0.1",
+    "postcss": "^6.0.1"
+  },
+  "peerDependencies": {
     "stylelint": ">=5.0.0"
   },
   "devDependencies": {
