--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ node_js:
 before_install:
   - if [[ `npm -v` != 5* ]]; then npm install -g npm@5; fi
   - npm install -g greenkeeper-lockfile@1
+  - npm install stylelint
 before_script:
   - greenkeeper-lockfile-update
 after_script:
