--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^4.7.0",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
+    "stylelint": "^8.4.0",
     "stylelint-test-rule-tape": "^0.2.0"
   }
 }
