--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ jobs:
     - stage: lint
       node_js: "8"
       script:
-        - npm run lint
+        - npm run lint:js
+        - npm run lint:prettier
