--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,9 @@
 {
+  "extends": ["airbnb-base/legacy", "prettier"],
   "env": {
     "node": true
   },
-  "extends": [
-    "airbnb-base/legacy"
-  ],
   "rules": {
-    "comma-dangle": [2, "never"],
-    "func-names": [2, "as-needed"],
-    "no-warning-comments": [2, { "terms": ["todo", "fixme"], "location": "anywhere" }],
-    "semi": [2, "never"]
+    "func-names": 0
   }
 }
-
