--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-import": "^2.7.0",
     "husky": "^0.14.3",
     "jest": "^22.1.4",
+    "key-del": "^1.3.0",
     "lint-staged": "^6.1.0",
     "prettier": "^1.10.2",
     "stylelint": "^8.4.0"
