Ignore dev dependencies

--- a/package.json
+++ b/package.json
@@ -34,9 +34,17 @@
   ],
   "greenkeeper": {
     "ignore": [
+      "coveralls",
       "eslint",
+      "eslint-config-airbnb-base",
+      "eslint-config-prettier",
       "eslint-plugin-import",
-      "prettier"
+      "husky",
+      "jest",
+      "key-del",
+      "lint-staged",
+      "prettier",
+      "stylelint"
     ]
   },
   "dependencies": {
