--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-import": "^2.13.0",
     "husky": "^0.14.3",
     "jest": "^23.4.1",
+    "jest-cli": "^23.6.0",
     "key-del": "^1.3.0",
     "lint-staged": "^7.0.0",
     "prettier": "^1.13.2",
