--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lib"
   ],
   "scripts": {
-    "precommit": "lint-staged",
     "test": "jest",
     "test:coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
     "lint:prettier": "prettier --list-different '**/*.js'",
@@ -67,5 +66,10 @@
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "stylelint": "^11.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
