--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lib"
   ],
   "scripts": {
-    "precommit": "lint-staged",
     "test": "jest",
     "test:coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls",
     "lint:prettier": "prettier --list-different '**/*.js'",
@@ -49,23 +48,28 @@
   },
   "dependencies": {
     "doiuse": "^4.2.0",
-    "lodash": "^4.17.4",
-    "postcss": "^7.0.0"
+    "lodash": "^4.17.15",
+    "postcss": "^7.0.21"
   },
   "peerDependencies": {
-    "stylelint": ">=5.0.0"
+    "stylelint": ">=11.1.1"
   },
   "devDependencies": {
-    "coveralls": "^3.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.13.0",
-    "husky": "^0.14.3",
-    "jest": "^23.4.1",
+    "coveralls": "^3.0.7",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
     "key-del": "^1.3.0",
-    "lint-staged": "^7.0.0",
-    "prettier": "^1.13.2",
-    "stylelint": "^9.0.0"
+    "lint-staged": "^9.4.2",
+    "prettier": "^1.18.2",
+    "stylelint": "^11.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
