--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stylelint-no-unsupported-browser-features",
   "version": "4.1.0",
   "description": "Disallow features that are unsupported by the browsers that you are targeting",
-  "homepage": "https://gitlab.com/ismay/stylelint-no-unsupported-browser-features#readme",
+  "homepage": "https://github.com/ismay/stylelint-no-unsupported-browser-features#readme",
   "author": "ismay",
   "license": "MIT",
   "main": "lib/index.js",
@@ -17,10 +17,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/ismay/stylelint-no-unsupported-browser-features.git"
+    "url": "git+https://github.com/ismay/stylelint-no-unsupported-browser-features.git"
   },
   "bugs": {
-    "url": "https://gitlab.com/ismay/stylelint-no-unsupported-browser-features/issues"
+    "url": "https://github.com/ismay/stylelint-no-unsupported-browser-features/issues"
   },
   "keywords": [
     "stylelint",
