--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "stylelint": ">=11.1.1"
   },
   "devDependencies": {
+    "codecov": "^3.8.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
