--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,14 @@ node_js:
   - 12
   - 10
 script:
-  - npm run test:coverage
+  - npm run test
 jobs:
   include:
     - stage: lint
       script:
         - npm run lint:prettier
         - npm run lint:js
+    - stage: coverage
+      script:
+        - npm run test:coverage
+        - npm run codecov
