--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-plugin-import": "^2.18.2",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
-    "key-del": "^1.3.0",
+    "jest-preset-stylelint": "^3.0.0",
     "lint-staged": "^10.4.2",
     "prettier": "^2.1.2",
     "stylelint": "^13.7.2"
@@ -57,5 +57,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "jest": {
+    "preset": "jest-preset-stylelint"
   }
 }
