--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "scripts": {
     "codecov": "codecov",
     "test": "cross-env BROWSERSLIST_DISABLE_CACHE=true BROWSERSLIST='IE 8' jest",
+    "test:tav": "tav",
     "test:coverage": "cross-env BROWSERSLIST_DISABLE_CACHE=true BROWSERSLIST='IE 8' jest --coverage",
-    "test:watch": "cross-env BROWSERSLIST_DISABLE_CACHE=true BROWSERSLIST='IE 8' jest --watch",
     "lint:prettier": "prettier --list-different '**/*.js'",
     "lint:js": "eslint '**/*.js'"
   },
@@ -53,6 +53,7 @@
     "jest-preset-stylelint": "^3.0.0",
     "lint-staged": "^10.4.2",
     "prettier": "^2.1.2",
-    "stylelint": "^13.7.2"
+    "stylelint": "^13.7.2",
+    "test-all-versions": "^5.0.1"
   }
 }
