ci: lint commits on travis as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ jobs:
   include:
     - stage: lint
       script:
+        - commitlint-travis
         - npm run lint:prettier
         - npm run lint:js
     - stage: coverage
