ci: update semantic release config

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,15 @@ jobs:
       script:
         - npm run test:coverage
         - npm run codecov
-deploy:
-  provider: script
-  script: npx semantic-release
-  on:
-    branch: master
+    - stage: release
+      deploy:
+        provider: script
+        script:
+          - npx semantic-release
+        on:
+          branch: master
 stages:
   - lint
   - test
   - coverage
-  - deploy
+  - release
