--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:tav": "tav",
     "test:coverage": "cross-env BROWSERSLIST_DISABLE_CACHE=true BROWSERSLIST='IE 8' jest --coverage",
     "lint:prettier": "prettier --list-different '**/*.js'",
-    "lint:js": "eslint '**/*.js'"
+    "lint:js": "eslint '**/*.js'",
+    "lint:commit-travis": "commitlint-travis",
+    "semantic-release": "semantic-release"
   },
   "peerDependencies": {
     "stylelint": ">=11.1.1"
@@ -21,8 +23,14 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-angular": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/travis-cli": "^11.0.0",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.1.1",
+    "@semantic-release/npm": "^7.0.6",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "codecov": "^3.8.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.6.0",
@@ -34,6 +42,7 @@
     "jest-preset-stylelint": "^3.0.0",
     "lint-staged": "^10.4.2",
     "prettier": "^2.1.2",
+    "semantic-release": "^17.2.2",
     "stylelint": "^13.7.2",
     "test-all-versions": "^5.0.1"
   },
