--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-  "branches": ["master"],
+  "branches": "master",
   "plugins": [
     ["@semantic-release/commit-analyzer", {
       "preset": "conventionalcommits"
@@ -7,10 +7,7 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/npm",
-    ["@semantic-release/git", {
-      "assets": ["CHANGELOG.md", "package.json"],
-      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-    }],
+    "@semantic-release/git",
     "@semantic-release/github"
   ]
 }
