--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -7,9 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '15'
     - run: npm i
     - run: npm run lint:js
     - run: npm run lint:prettier
@@ -26,16 +23,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
-    - run: npm run test:tav
+    - run: npm run test
 
   coverage:
     needs: [test]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '15'
     - run: npm i
     - run: npm run test:coverage
     - uses: codecov/codecov-action@v1
@@ -49,9 +43,6 @@ jobs:
       with:
         fetch-depth: 0
         persist-credentials: false
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '15'
     - run: npm i
     - run: npm run semantic-release
       env:
