--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: npm i
+    - run: npm i --ignore-scripts
     - run: npm run lint:js
     - run: npm run lint:prettier
 
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i
+    - run: npm i --ignore-scripts
     - run: npm run test
 
   coverage:
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: npm i
+    - run: npm i --ignore-scripts
     - run: npm run test:coverage
     - uses: codecov/codecov-action@v1
 
@@ -43,7 +43,7 @@ jobs:
       with:
         fetch-depth: 0
         persist-credentials: false
-    - run: npm i
+    - run: npm i --ignore-scripts
     - run: npm run semantic-release
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
