fix(installation): remove husky lifecycle script

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test:coverage": "cross-env BROWSERSLIST_DISABLE_CACHE=true BROWSERSLIST='IE 8' jest --coverage",
     "lint:prettier": "prettier --list-different '**/*.js'",
     "lint:js": "eslint '**/*.js'",
-    "semantic-release": "semantic-release",
-    "prepare": "husky install"
+    "semantic-release": "semantic-release"
   },
   "peerDependencies": {
     "stylelint": ">=13.0.0"
