--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install"
   },
   "peerDependencies": {
-    "stylelint": ">=13.0.0"
+    "stylelint": "14.x"
   },
   "dependencies": {
     "doiuse": "^4.4.1",
