chore(peerdeps): drop support for stylelint v13
BREAKING CHANGE: dropped support for stylelint v13

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install"
   },
   "peerDependencies": {
-    "stylelint": ">=13.0.0"
+    "stylelint": "^14.0.0"
   },
   "dependencies": {
     "doiuse": "^4.4.1",
