chore(renovate): enable renovate approval workflow

--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
   ],
   "renovate": {
     "extends": [
-      "config:base"
+      "config:js-lib",
+      ":dependencyDashboardApproval",
+      ":enableVulnerabilityAlerts"
     ]
   }
 }
