--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -36,7 +36,7 @@ jobs:
 
   release:
     needs: [test]
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/5.x'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
