fix(node): broaden supported node engines range

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "author": "ismay",
   "license": "MIT",
   "engines": {
-    "node": "^14 || ^16"
+    "node": ">=14"
   },
   "main": "lib/index.js",
   "files": [
