--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install"
   },
   "peerDependencies": {
-    "stylelint": "^14.0.0"
+    "stylelint": "^14.0.0||^15.0.0"
   },
   "dependencies": {
     "doiuse": "^4.4.1",
