--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-import": "2.27.5",
     "husky": "8.0.3",
     "jest": "29.7.0",
+    "jest-light-runner": "^0.6.0",
     "jest-preset-stylelint": "7.0.0",
     "lint-staged": "13.2.3",
     "prettier": "3.0.0",
