--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "engines": {
     "node": ">=18.12.0"
   },
-  "main": "lib/index.js",
+  "type": "module",
+  "exports": "./lib/index.js",
   "files": [
     "lib/index.js"
   ],
