--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "doiuse": "^6.0.2",
-    "lodash": "^4.17.21",
+    "lodash.pick": "^4.4.0",
     "postcss": "^8.4.32"
   },
   "devDependencies": {
