--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-import": "2.29.1",
     "husky": "8.0.3",
     "jest": "29.7.0",
-    "jest-light-runner": "^0.6.0",
+    "jest-light-runner": "0.6.0",
     "jest-preset-stylelint": "7.0.0",
     "lint-staged": "15.2.0",
     "prettier": "3.1.1",
