--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,7 +1,6 @@
 {
   "**/*.js": [
     "prettier --write",
-    "eslint",
-    "cross-env BROWSERSLIST_DISABLE_CACHE=true BROWSERSLIST='IE 8' jest --bail --findRelatedTests"
+    "eslint"
   ]
 }
