--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint:prettier": "prettier --list-different '**/*.js'",
     "lint:js": "eslint '**/*.js'",
     "semantic-release": "semantic-release",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
+  "packageManager": "pnpm@9.15.4",
   "peerDependencies": {
     "stylelint": "^16.0.2"
   },
@@ -20,28 +21,28 @@
     "postcss": "^8.4.32"
   },
   "devDependencies": {
-    "@commitlint/cli": "18.4.3",
-    "@commitlint/config-conventional": "18.4.3",
+    "@commitlint/cli": "19.6.1",
+    "@commitlint/config-conventional": "19.6.0",
     "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "11.1.0",
+    "@semantic-release/commit-analyzer": "13.0.1",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "9.2.6",
-    "@semantic-release/npm": "11.0.2",
-    "@semantic-release/release-notes-generator": "12.1.0",
+    "@semantic-release/github": "11.0.1",
+    "@semantic-release/npm": "12.0.1",
+    "@semantic-release/release-notes-generator": "14.0.3",
     "codecov": "3.8.3",
     "cross-env": "7.0.3",
     "eslint": "8.56.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
-    "husky": "8.0.3",
+    "husky": "9.1.7",
     "jest": "29.7.0",
     "jest-light-runner": "^0.6.0",
-    "jest-preset-stylelint": "7.0.0",
-    "lint-staged": "15.2.0",
-    "prettier": "3.1.1",
-    "semantic-release": "22.0.12",
-    "stylelint": "16.1.0"
+    "jest-preset-stylelint": "7.2.0",
+    "lint-staged": "15.4.3",
+    "prettier": "3.4.2",
+    "semantic-release": "24.2.1",
+    "stylelint": "16.14.1"
   },
   "author": "RJWadley",
   "license": "MIT",
