--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
+    "@eslint/js": "^9.19.0",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "13.0.1",
     "@semantic-release/git": "10.0.1",
@@ -31,10 +32,8 @@
     "@semantic-release/release-notes-generator": "14.0.3",
     "codecov": "3.8.3",
     "cross-env": "7.0.3",
-    "eslint": "8.56.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "husky": "9.1.7",
     "jest": "29.7.0",
     "jest-light-runner": "^0.6.0",
