chore: update github actions

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -7,9 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm i --ignore-scripts
-      - run: npm run lint:js
-      - run: npm run lint:prettier
+      - run: corepack enable
+      - run: corepack pnpm i
+      - run: corepack pnpm run lint:js
+      - run: corepack pnpm run lint:prettier
 
   test:
     needs: [lint]
@@ -19,19 +20,21 @@ jobs:
         node-version: [18.x, 20.x]
     steps:
       - uses: actions/checkout@v4
+      - run: corepack enable
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm i --ignore-scripts
-      - run: npm run test
+      - run: corepack pnpm i
+      - run: corepack pnpm run test
 
   coverage:
     needs: [test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm i --ignore-scripts
-      - run: npm run test:coverage
+      - run: corepack enable
+      - run: corepack pnpm i
+      - run: corepack pnpm run test:coverage
       - uses: codecov/codecov-action@v3
 
   release:
@@ -43,8 +46,9 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-      - run: npm i --ignore-scripts
-      - run: npm run semantic-release
+      - run: corepack enable
+      - run: corepack pnpm i
+      - run: corepack pnpm run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
