feat: add @supports condition awareness via ignoreWithinAtSupports
- Implement new ignoreWithinAtSupports option to skip browser compatibility warnings
  for features wrapped in valid @supports blocks
- Add comprehensive test cases covering:
  * Basic @supports acceptance
  * Nested conditions
  * Logical operators (and/or/not)
  * Edge cases with partial support
- Update documentation with new option usage examples

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylelint-no-unsupported-browser-features",
-  "version": "8.0.4",
+  "version": "8.0.4-modified.0",
   "description": "Disallow features that are unsupported by the browsers that you are targeting",
   "homepage": "https://github.com/RJWadley/stylelint-no-unsupported-browser-features#readme",
   "scripts": {
@@ -17,6 +17,7 @@
     "stylelint": "^16.0.2"
   },
   "dependencies": {
+    "css-supports-parser": "^1.0.0",
     "doiuse": "^6.0.5",
     "postcss": "^8.4.32"
   },
